# connect4

./: CHANGELOG.md  LICENSE  README.md  connect4.cabal
src/: Board.hs  Game.hs  Main.hs  Types.hs
