cabal-version:       2.2

name:                connect4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/costavanelsas/connect4#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Costa
maintainer:          Costa
copyright:           2025 Costa
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable connect4
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Board
                       Game
                       Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/costavanelsas/connect4
